--- a/In class work/Workshops/AcmeVIP/index.html
+++ b/In class work/Workshops/AcmeVIP/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src='app.js' defer></script>
-    <link rel='stylesheet' href='styles.css' />
+    <link rel='stylesheet' href='style.css' />
   </head>
   <body>
     <h1>Acme Employees</h1>
